# jetson_cpp_opencv

./: CMakeLists.txt  main.cpp
